prometheus-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: services-strip
spec:
  stripPrefix:
    prefixes:
    - /prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-services-strip@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /prometheus
        pathType: Prefix
